objects/SBQQ__ProductOption__c.object
<CustomObject>
    <fields>
        <fullName>SBQQ__QuoteLineVisibility__c</fullName>
        <description>Determines when quote line generated by this option is visible. If your product bundle components are only used to calculate the price of the bundle, you can hide components from users by using this field.</description>
        <inlineHelpText>Configure visibility of quote line generated by this option.</inlineHelpText>
        <label>Quote Line Visibility</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Always</fullName>
                </value>
                <value>
                    <fullName>Editor Only</fullName>
                </value>
                <value>
                    <fullName>Document Only</fullName>
                </value>
                <value>
                    <fullName>Never</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalProductOption__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product option that replaces this product option on renewal.</description>
        <inlineHelpText>Product option that replaces this product option on renewal. Use this to quote a different SKU when renewing.</inlineHelpText>
        <label>Renewal Product Option</label>
        <referenceTo>SBQQ__ProductOption__c</referenceTo>
        <relationshipLabel>Product Options</relationshipLabel>
        <relationshipName>ProductOptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that indicates whether this component is required or not.</description>
        <inlineHelpText>Select the checkbox if this product is required on the bundle.</inlineHelpText>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates this option should be selected by default.</description>
        <inlineHelpText>Select the checkbox if this product option should be automatically selected by default.</inlineHelpText>
        <label>Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionScope__c</fullName>
        <description>Specifies percent of total calculation scope for percent of total priced products added as product options.</description>
        <inlineHelpText>Choose how this percent of total product option is calculated. Package is specific to the parent product. Components is specific to sibling components. Both is specific to the parent and sibling components.</inlineHelpText>
        <label>Percent of Total Scope</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Package</fullName>
                </value>
                <value>
                    <fullName>Components</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>Entire Hierarchy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__System__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marks this option as managed by the system which means users can not manually select or deselect.</description>
        <inlineHelpText>Select the checkbox to indicate this option is managed by the system which makes it unavailable for user selection.</inlineHelpText>
        <label>System</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Type__c</fullName>
        <description>Type of this option.</description>
        <inlineHelpText>Use &quot;Component&quot; if this option, including quantity, is dependent on parent. Use&quot; Accessory&quot; if this option is dependent on parent but quantity is independent. Use &quot;Related Product&quot; for related but fully independent products.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Component</fullName>
                    <default>true</default>
                    <label>Component</label>
                </value>
                <value>
                    <fullName>Accessory</fullName>
                </value>
                <value>
                    <fullName>Related Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__UnitPrice__c</fullName>
        <description>Unit price for this option. This will override the value from price book.</description>
        <inlineHelpText>Unit price for this option. This will override the value from price book.</inlineHelpText>
        <label>Unit Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__UpliftedByPackage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check to automatically apply uplift from parent package to this component. Only applies to components that are multi-segmented products.</description>
        <inlineHelpText>Check to automatically apply uplift from parent package to this component. Only applies to components that are multi-segmented products.</inlineHelpText>
        <label>Uplifted By Package</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sample__c</fullName>
        <label>Sample</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Sample</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Smart_Recovery__c</fullName>
        <label>Smart Recovery</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Storage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Storage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Style__c</fullName>
        <label>Style</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Style</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Testing_Environments__c</fullName>
        <label>Testing Environments</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tube_Type__c</fullName>
        <label>Tube Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Convolute</fullName>
                    <default>true</default>
                    <label>Convolute</label>
                </value>
                <value>
                    <fullName>Konva Kore</fullName>
                </value>
                <value>
                    <fullName>Spiral</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>U_s_Occupied__c</fullName>
        <label>U&apos;s Occupied</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Cost__c</fullName>
        <label>Unit Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UsPerUnit__c</fullName>
        <formula>SBQQ__OptionalSKU__r.U_s_Occupied__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>U&apos;s Per Unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Volume_Day__c</fullName>
        <label>Volume / Day</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Volume_Day</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Windowed_Controlling__c</fullName>
        <label>Windowed Controlling</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Window_Controlling</valueSetName>
        </valueSet>
    </fields>
    <label>Product Option</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SBQQ__ConfiguredSKU__c</columns>
        <columns>SBQQ__OptionalSKU__c</columns>
        <columns>SBQQ__AppliedImmediately__c</columns>
        <columns>SBQQ__AppliedImmediatelyContext__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SBQQ__OptionalSKU__c</field>
            <operation>contains</operation>
            <value>PDU</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PO-{000000}</displayFormat>
        <label>Option Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Options</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>SBQQ__Apply_Immediately_Context_Validation</fullName>
        <active>true</active>
        <description>The &apos;Apply Immediately&apos; field must be checked before providing an &apos;Apply Immediately Context&apos;. Otherwise, please change the &apos;Apply Immediately Context&apos; field to ‘None&apos;.</description>
        <errorConditionFormula>AND(TEXT(SBQQ__AppliedImmediatelyContext__c) != null, SBQQ__AppliedImmediately__c == false)</errorConditionFormula>
        <errorMessage>The &apos;Apply Immediately&apos; field must be checked before providing an &apos;Apply Immediately Context&apos;. Otherwise, please change the &apos;Apply Immediately Context&apos; field to ‘None&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__Cannot_Bundle_Evergreen_Renewable_SKUs</fullName>
        <active>true</active>
        <description>The Evergreen and Renewable bundle cannot coexist in a bundle</description>
        <errorConditionFormula>AND(OR(AND(ISPICKVAL( SBQQ__ConfiguredSKU__r.SBQQ__SubscriptionType__c , &apos;Evergreen&apos;), ISPICKVAL( SBQQ__OptionalSKU__r.SBQQ__SubscriptionType__c ,&apos;Renewable&apos;)),AND(ISPICKVAL( SBQQ__ConfiguredSKU__r.SBQQ__SubscriptionType__c , &apos;Renewable&apos;),ISPICKVAL( SBQQ__OptionalSKU__r.SBQQ__SubscriptionType__c ,&apos;Evergreen&apos;))))</errorConditionFormula>
        <errorMessage>Can’t include evergreen and renewable products in the same bundle.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__Cannot_Have_RenewableEvergreen_In_Bundle</fullName>
        <active>true</active>
        <description>The bundle cannot have configured or optional SKU subscription type as Renewable/Evergreen</description>
        <errorConditionFormula>AND(OR(ISPICKVAL( SBQQ__ConfiguredSKU__r.SBQQ__SubscriptionType__c , &apos;Renewable/Evergreen&apos;),ISPICKVAL( SBQQ__OptionalSKU__r.SBQQ__SubscriptionType__c ,&apos;Renewable/Evergreen&apos;)))</errorConditionFormula>
        <errorMessage>Can’t include evergreen and renewable products in the same bundle.</errorMessage>
    </validationRules>
</CustomObject>